# sfd_tool

./: .gitignore  80-spd.rules  ARCHITECTURE.md  BMPlatform.cpp  BMPlatform.h  BMPlatform_Proxy.cpp  CMakeLists.txt  GenTosNoAvb.h  GtkWidgetHelper.cpp  GtkWidgetHelper.hpp  GtkWindowCreator.hpp  LICENSE.txt  Makefile  Proxy32.cpp  README.md  README_ZH.md  SFD Tool GUI.html  VERSION.txt  Wrapper.cpp  Wrapper.h  app.aps  app.rc  bottom_bar.cpp  bottom_bar.h  build-deb.sh  build-rpm.sh  common.c  common.cpp  common.h  fdl_info.json  gen_po.py  i18n.h  main.c  main.cpp  main.cpp.bak  main.h  main_console.cpp  man_sfd-tool.1  partition_1773106926.xml  patch_i18n.py  (+13 more)
.claude/: config.json  settings.local.json
.claude/skills/sfd-mode/: SKILL.md
.github/workflows/: build.yml  c-cpp.yml
Bridge/: BMPlatform.cpp  BMPlatform.h  Bridge.cpp  CMakeLists.txt
Proxy32/: CMakeLists.txt  Proxy32.cpp
assets/: app.rc
core/: CMakeLists.txt  PackageParser.cpp  PackageParser.hpp  XmlParser.hpp  ZipUnzipper.hpp  app_state.h  config_service.cpp  config_service.h  device_attach_helpers.cpp  device_attach_helpers.h  device_service.cpp  device_service.h  file_io.cpp  file_io.h  flash_service.cpp  flash_service.h  logging.cpp  logging.h  pac_extract.cpp  pac_extract.h  result.h  spd_protocol.cpp  spd_protocol.h  usb_transport.cpp  usb_transport.h
debian/: changelog  control  copyright  rules  sfd-tool.manpages  sfd_tool.docs  std_tool.install
docs/: RELEASE_GUIDE_ZH.md  USER_GUIDE_ZH.md  VERSION_LOG.md  cmake.md  cmake_EN.md
locale/: sfd_tool.pot
locale/zh_CN/LC_MESSAGES/: sfd_tool.mo  sfd_tool.po
md/: cmake.md  cmake_EN.md
packaging/: build-deb.sh  build-rpm.sh  man_sfd-tool.1
packaging/debian/: changelog  control  rules  sfd-tool.manpages
packaging/macos/: Info.plist.in
packaging/rpm-build/: sfd-tool.spec
pages/: CMakeLists.txt  page_about.cpp  page_about.h  page_advanced_op.cpp  page_advanced_op.h  page_advanced_set.cpp  page_advanced_set.h  page_connect.cpp  page_connect.h  page_debug.cpp  page_debug.h  page_log.cpp  page_log.h  page_manual.cpp  page_manual.h  page_pac_flash.cpp  page_pac_flash.h  page_partition.cpp  page_partition.h
rpm-build/: sfd-tool.spec
scripts/: build.sh  build_macos_app.sh  bump_version.ps1  bump_version.sh  dev.ps1  dev.sh  gen_po.py  patch_i18n.py  patch_includes.py  release.ps1  release.sh
tests/: CMakeLists.txt  doctest.h  test_blocksize_and_backup_service.cpp  test_pac_extract.cpp  test_partition_backup_paths.cpp  test_spd_protocol.cpp  test_stubs.cpp  test_stubs.cpp.orig
ui/: GtkWidgetHelper.cpp  GtkWidgetHelper.hpp  ui_common.cpp  ui_common.h  ui_page.h
ui/layout/: bottom_bar.cpp  bottom_bar.h
